<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:gravity="center">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:id="@+id/parent_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView

                        android:gravity="end"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/last_updated"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/hospital_name_sin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hospital_name_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/hospital_name_tamil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20dp" />

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="20dp"
                    android:id="@+id/cumulative_local_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_cumulative_local"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_local_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_local"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/treatment_local_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_treatment_local"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_local_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_local"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cumulative_foreign_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_cumulative_foreign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_foreign_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_foreign"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/treatment_foreign_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_treatment_foreign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_foreign_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_foreign"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cumulative_total_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_cumulative_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_total_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cumulative_total"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/treatment_total_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:background="@drawable/card_outline_drawable"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:id="@+id/txt_treatment_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="45dp"
                            android:textStyle="bold" />

                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_total_sin"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                        <TextView
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treatment_total"
                            android:textAlignment="center"
                            android:textSize="15dp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</RelativeLayout>